# python-cpbd

./: README.md  pyproject.toml  setup.py
cpbd/: compute.py
