[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpbd"
version = "1.0.7"
description = "A Python implementation of the CPBD (Cumulative Probability of Blur Detection) sharpness metric"
readme = "README.md"
requires-python = ">=3.7"
license = "BSD-3-Clause"
authors = [
    {name = "Jun Zhao", email = "junzhao@mypopydev.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
keywords = [
    "sharpness",
    "metric",
    "blur",
    "cumulative probability",
    "no-reference",
    "objective",
    "perceptual"
]
dependencies = [
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "scikit-image>=0.18.0",
    "scipy>=1.7.0",
    "imageio>=2.9.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "tox>=4.0.0"
]

[tool.setuptools]
packages = ["cpbd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 